MDEV-24588: Fix crash with unnamed column in derived table

Fixes a server crash (assertion failure) that occurred when
a derived table contained an unnamed empty string literal
(e.g., SELECT '' FROM t).